--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,11 +1,12 @@
 events:
-  game_ended: 60
-  game_started: 233
+  game_ended: 61
+  game_started: 240
 player:
   score:
-    average: 1248053.7878787878
+    average: 1576794.776119403
     top:
     - 37197000
+    - 23273700
     - 5638900
     - 4905500
     - 2706450
@@ -14,75 +15,75 @@ player:
     - 1766300
     - 1748700
     - 1481150
-    - 1433200
-    total: 66
+    total: 67
 shots:
-  captiveball: 144
-  centertarget: 1359
-  collectitem1: 1979
-  collectitem2: 1865
-  collectitem3: 781
-  collectitem4: 1701
-  collectitem5: 1661
-  leftslingshot: 1063
+  captiveball: 188
+  centertarget: 1371
+  collectitem1: 1994
+  collectitem2: 1881
+  collectitem3: 806
+  collectitem4: 1722
+  collectitem5: 1676
+  leftslingshot: 1126
   loopleft: 155
   loopright: 97
-  popbumper1: 995
-  popbumper2: 1205
-  popbumper3: 1561
-  rightslingshot: 547
-  skill_scoup: 108
-  spinner: 5007
+  popbumper1: 1041
+  popbumper2: 1269
+  popbumper3: 1637
+  rightslingshot: 566
+  skill_scoup: 109
+  spinner: 5491
   village_jackpot: 22
-  villager_jackpot: 6
+  villager_jackpot: 45
+  villager_spinner: 33
 switches:
-  s_bumperrail: 316
-  s_captiveball: 144
-  s_centertarget: 1394
-  s_collectitem1: 2744
-  s_collectitem2: 2626
-  s_collectitem3: 1009
-  s_collectitem4: 2467
-  s_collectitem5: 2429
+  s_bumperrail: 327
+  s_captiveball: 188
+  s_centertarget: 1406
+  s_collectitem1: 2759
+  s_collectitem2: 2642
+  s_collectitem3: 1034
+  s_collectitem4: 2488
+  s_collectitem5: 2444
   s_credit_right: 0
-  s_drop1: 454
-  s_drop2: 707
-  s_drop3: 2009
-  s_drop4: 434
-  s_drop5: 1197
-  s_drop6: 635
-  s_left_flipper: 5466
-  s_leftinlane: 68
-  s_leftoutlane: 149
-  s_leftsling: 1063
-  s_loopleft: 371
-  s_loopright: 621
+  s_drop1: 463
+  s_drop2: 721
+  s_drop3: 2034
+  s_drop4: 442
+  s_drop5: 1221
+  s_drop6: 648
+  s_left_flipper: 5643
+  s_leftinlane: 69
+  s_leftoutlane: 157
+  s_leftsling: 1126
+  s_loopleft: 378
+  s_loopright: 673
   s_maint: 0
-  s_plungerlane: 776
-  s_popbumper1: 995
-  s_popbumper2: 1205
-  s_popbumper3: 1561
-  s_right_flipper: 4564
+  s_plungerlane: 801
+  s_popbumper1: 1041
+  s_popbumper2: 1269
+  s_popbumper3: 1637
+  s_right_flipper: 4699
   s_rightinlane: 0
-  s_rightoutlane: 89
-  s_rightsling: 547
-  s_scoup: 329
-  s_spinner: 5008
+  s_rightoutlane: 92
+  s_rightsling: 566
+  s_scoup: 334
+  s_spinner: 5493
   s_start: 21
   s_tilt: 0
   s_tooltarget1: 321
-  s_tooltarget2: 328
-  s_tooltarget3: 187
-  s_topbumperleft: 290
-  s_topbumperright: 466
-  s_topkicker: 1256
-  s_trough1: 627
-  s_trough2: 550
-  s_trough3: 534
-  s_trough4: 425
-  s_troughjam: 557
+  s_tooltarget2: 341
+  s_tooltarget3: 197
+  s_topbumperleft: 312
+  s_topbumperright: 499
+  s_topkicker: 1309
+  s_trough1: 651
+  s_trough2: 568
+  s_trough3: 548
+  s_trough4: 436
+  s_troughjam: 575
   s_upperdrop: 115
-  s_whitedot1: 127
-  s_whitedot2: 129
-  s_whitedot3: 168
-  s_whitedot4: 165
+  s_whitedot1: 134
+  s_whitedot2: 134
+  s_whitedot3: 184
+  s_whitedot4: 173
