--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -163,6 +163,7 @@ event_player:
   loopleft_hit{current_player.state_machine_leftloop_state=="enabled"}: diverter_leftloophit
   loopleft_hit{current_player.state_machine_leftloop_state=="travel"}: diverter_leftloophit, diverter_leftlooptravelhit
 
-
-     
+#======================================================
+# WE WILL CONTROL ALL DIVERTER CONTROL ACTIVITIES HERE     
+#======================================================
 
