--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1254,6 +1254,10 @@ player_vars:
     initial_value: 1
     value_type: int
 
+  world_jackpot:
+    initial_value: 1
+    value_type: int
+
   #World Variables
   world_color:  #sets color of world for accent colors
     initial_value: "white"
