--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1284,6 +1284,10 @@ player_vars:
     initial_value: 0
     value_type: int
 
+  world_item1_remaining:
+    initial_value: 0
+    value_type: int
+
   #Item 2 Variables
   world_item2_name:
     initial_value: "none"
@@ -1294,6 +1298,10 @@ player_vars:
     value_type: str
 
   world_item2_needed:
+    initial_value: 0
+    value_type: int
+
+  world_item2_remaining:
     initial_value: 0
     value_type: int
 
@@ -1310,6 +1318,10 @@ player_vars:
     initial_value: 0
     value_type: int
 
+  world_item3_remaining:
+    initial_value: 0
+    value_type: int
+
   #Item 4 Variables
   world_item4_name:
     initial_value: "none"
@@ -1320,6 +1332,10 @@ player_vars:
     value_type: str
 
   world_item4_needed:
+    initial_value: 0
+    value_type: int
+
+  world_item4_remaining:
     initial_value: 0
     value_type: int
 
