--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -1,6 +1,6 @@
 #config_version=5
 mode:
-    start_events: award_world1
+    start_events: world1_starting
     stop_events: world1_completed
     priority: 500
 
@@ -79,7 +79,68 @@ variable_player:
     world_item4_needed:
       int: 2
       action: set
-  
+
+  logicblock_wc1_item1_counter_updated:
+    world_item1_remaining:
+      int: value
+      action: set
+  logicblock_wc1_item2_counter_updated:
+    world_item2_remaining:
+      int: value
+      action: set
+  logicblock_wc1_item3_counter_updated:
+    world_item3_remaining:
+      int: value
+      action: set
+  logicblock_wc1_item4_counter_updated:
+    world_item4_remaining:
+      int: value
+      action: set
+
+counters:
+  wc1_item1_counter:
+    count_events: collectitem1_hit
+    reset_on_complete: False
+    starting_count: 2
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w1_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: world1_started
+  wc1_item2_counter:
+    count_events: collectitem2_hit
+    reset_on_complete: False
+    starting_count: 2
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w1_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: world1_started
+  wc1_item3_counter:
+    count_events: collectitem4_hit
+    reset_on_complete: False
+    starting_count: 2
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w1_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: world1_started
+  wc1_item4_counter:
+    count_events: collectitem5_hit
+    reset_on_complete: False
+    starting_count: 2
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w1_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: world1_started
+
 event_player:
   mode_world1_started:
-    world_started
+    world1_started
+  w1_itemcheckcomplete{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+    world1_readytocomplete
