--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -223,7 +223,7 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: world1_starting
+    events_when_started: world1_started
     reset_events: reset_worlds
     enable_events: mode_base_started
     complete_events: world1_completed
