--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -185,14 +185,14 @@ event_player:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_close
   #>> Village Multiball Return All Items Collected (World Collected)
-  divertercontrol_checkworldstate{multiplier_mb==2}:
+  divertercontrol_checkworldstate{current_player.multiplier_mb==2}:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
-  divertercontrol_checkworldstate{multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+  divertercontrol_checkworldstate{current_player.multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
     divertercontrol_leftloop_travel
     divertercontrol_rightloop_enable
   #>> Village Multiball Return Not All Items Collected (World Started)
-  divertercontrol_checkworldstate{multiplier_mb==1 and (current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0)}:
+  divertercontrol_checkworldstate{current_player.multiplier_mb==1 and (current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0)}:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
 
