--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,9 +1,9 @@
 events:
-  game_ended: 66
-  game_started: 287
+  game_ended: 70
+  game_started: 296
 player:
   score:
-    average: 1925189.0410958903
+    average: 1832741.0256410257
     top:
     - 37197000
     - 24470600
@@ -15,75 +15,81 @@ player:
     - 2510050
     - 1782900
     - 1766300
-    total: 73
+    total: 78
 shots:
-  captiveball: 214
-  centertarget: 1428
-  collectitem1: 2177
-  collectitem2: 2042
-  collectitem3: 918
-  collectitem4: 1897
-  collectitem5: 1840
-  leftslingshot: 1245
-  loopleft: 245
-  loopright: 227
-  popbumper1: 1175
-  popbumper2: 1412
-  popbumper3: 1832
-  rightslingshot: 619
-  skill_scoup: 116
-  spinner: 7001
+  captiveball: 221
+  centertarget: 1473
+  collectitem1: 2202
+  collectitem2: 2065
+  collectitem3: 956
+  collectitem4: 1920
+  collectitem5: 1863
+  leftslingshot: 1301
+  loopleft: 298
+  loopright: 274
+  mb_drop1: 4
+  mb_drop2: 16
+  mb_drop3: 9
+  mb_drop4: 3
+  mb_drop5: 15
+  mb_drop6: 1
+  popbumper1: 1221
+  popbumper2: 1478
+  popbumper3: 1921
+  rightslingshot: 656
+  skill_scoup: 121
+  spinner: 7155
   village_jackpot: 22
-  villager_jackpot: 64
+  villager_jackpot: 65
   villager_spinner: 114
 switches:
-  s_bumperrail: 357
-  s_captiveball: 214
-  s_centertarget: 1463
-  s_collectitem1: 2997
-  s_collectitem2: 2846
-  s_collectitem3: 1146
-  s_collectitem4: 2703
-  s_collectitem5: 2638
+  s_bumperrail: 369
+  s_captiveball: 221
+  s_centertarget: 1508
+  s_collectitem1: 3033
+  s_collectitem2: 2889
+  s_collectitem3: 1184
+  s_collectitem4: 2746
+  s_collectitem5: 2671
   s_credit_right: 0
-  s_drop1: 544
-  s_drop2: 846
-  s_drop3: 2246
-  s_drop4: 520
-  s_drop5: 1393
-  s_drop6: 763
-  s_left_flipper: 6172
-  s_leftinlane: 77
-  s_leftoutlane: 170
-  s_leftsling: 1245
-  s_loopleft: 491
-  s_loopright: 854
+  s_drop1: 580
+  s_drop2: 905
+  s_drop3: 2351
+  s_drop4: 554
+  s_drop5: 1474
+  s_drop6: 808
+  s_left_flipper: 6546
+  s_leftinlane: 82
+  s_leftoutlane: 172
+  s_leftsling: 1301
+  s_loopleft: 544
+  s_loopright: 901
   s_maint: 0
-  s_plungerlane: 947
-  s_popbumper1: 1175
-  s_popbumper2: 1412
-  s_popbumper3: 1832
-  s_right_flipper: 5088
+  s_plungerlane: 996
+  s_popbumper1: 1221
+  s_popbumper2: 1478
+  s_popbumper3: 1921
+  s_right_flipper: 5412
   s_rightinlane: 0
-  s_rightoutlane: 98
-  s_rightsling: 619
-  s_scoup: 375
-  s_spinner: 7003
-  s_start: 22
+  s_rightoutlane: 103
+  s_rightsling: 656
+  s_scoup: 398
+  s_spinner: 7157
+  s_start: 23
   s_tilt: 0
-  s_tooltarget1: 336
-  s_tooltarget2: 354
-  s_tooltarget3: 222
-  s_topbumperleft: 378
-  s_topbumperright: 597
-  s_topkicker: 1523
-  s_trough1: 782
-  s_trough2: 675
-  s_trough3: 651
-  s_trough4: 510
-  s_troughjam: 682
-  s_upperdrop: 198
-  s_whitedot1: 156
-  s_whitedot2: 154
-  s_whitedot3: 220
-  s_whitedot4: 204
+  s_tooltarget1: 345
+  s_tooltarget2: 368
+  s_tooltarget3: 231
+  s_topbumperleft: 387
+  s_topbumperright: 610
+  s_topkicker: 1546
+  s_trough1: 817
+  s_trough2: 706
+  s_trough3: 682
+  s_trough4: 536
+  s_troughjam: 715
+  s_upperdrop: 243
+  s_whitedot1: 163
+  s_whitedot2: 158
+  s_whitedot3: 227
+  s_whitedot4: 210
