--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -51,8 +51,12 @@ event_player:
     item_collected
   logicblock_counter_villagermultiball_complete:
     villagermultiball_ready
+  #START VILLAGER MULTIBALL ON PLUNGE
   sw_playfield_active_active{device.multiball_locks.villagerlock.locked_balls==1 and device.multiball_locks.villagerlock.enabled}:
     villagermultiball_start
+  #START NIGHT MULTIBALL ON PLUNGE
+  sw_playfield_active_active{device.multiball_locks.nightlock.locked_balls==1 and device.multiball_locks.nightlock.enabled}:
+    nightmode_start
   ball_started:
     item_collected
 
@@ -72,6 +76,12 @@ multiball_locks:
      lock_devices: bd_topkicker 
      enable_events: villagermultiball_ready
      disable_events: villagermultiball_start
+   nightlock:
+     balls_to_lock: 1
+     locked_ball_counting_strategy: physical_only
+     lock_devices: bd_scoop 
+     enable_events: nightmode_ready
+     disable_events: nightmode_start
 
 multiballs:
    villagermb:
@@ -79,6 +89,12 @@ multiballs:
      ball_locks: bd_topkicker
      enable_events: villagermultiball_ready
      start_events: villagermultiball_start
+     shoot_again: 0s
+   nightmb:
+     ball_count: 2
+     ball_locks: bd_scoop
+     enable_events: nightmode_ready
+     start_events: nightmode_start
      shoot_again: 0s
 
 #Player Variables
@@ -237,7 +253,7 @@ achievements:
     events_when_started: world1_start
     reset_events: reset_worlds
     enable_events: mode_base_started
-    complete_events: world1_completed
+    complete_events: multiball_nightmb_ended
     events_when_completed: rotate_mission_rotator, start_world
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
@@ -250,7 +266,7 @@ achievements:
     show_when_completed: show_solidcolor 
     events_when_started: award_world2
     reset_events: reset_worlds
-    enable_events: world1_completed
+    enable_events: multiball_nightmb_ended
     complete_events: world2_completed
     events_when_completed: rotate_mission_rotator, start_world
     restart_on_next_ball_when_started: true
