--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -59,7 +59,38 @@ event_player:
     nightmode_start
   ball_started:
     item_collected
+  
+  
 
+  #COMPLETE WORLDS WHEN NIGHT MODE STARTS
+  multiball_nightmb_started{current_player.world_id==1}:
+    world1_completed
+  multiball_nightmb_started{current_player.world_id==2}:
+    world2_completed
+  multiball_nightmb_started{current_player.world_id==3}:
+    world3_completed
+  multiball_nightmb_started{current_player.world_id==4}:
+    world4_completed
+  multiball_nightmb_started{current_player.world_id==5}:
+    world5_completed
+
+  #START WORLD 1
+  mode_base_started{current_player.world_id==0}:
+    world1_start
+
+  #ENABLE NEXT WORLDS WHEN NIGHT MODE RETURNS
+  multiball_nightmb_ended{current_player.world_id==1}:
+    world2_start
+  multiball_nightmb_ended{current_player.world_id==2}:
+    world3_start
+  multiball_nightmb_ended{current_player.world_id==3}:
+    world4_start
+  multiball_nightmb_ended{current_player.world_id==4}:
+    world5_start
+  multiball_nightmb_ended{current_player.world_id==5}:
+    world6_start
+
+  
 counters:
    counter_villagermultiball:
       count_events: spinner_hit
@@ -202,8 +233,6 @@ sound_player:
   #VILLAGER MULTIBALL
   villagermultiball_ready:
     villager_multiball_ready
-  #multiball_lock_villagerlock_locked_ball:     #COMMENTED OUT SINCE I DONT THINK THIS DOES ANYTHING
-  #  villager_multiball
       
 show_player:
   mode_base_started:
@@ -250,11 +279,11 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: world1_start
+    events_when_started: world1_started
     reset_events: reset_worlds
-    enable_events: mode_base_started
-    complete_events: multiball_nightmb_ended
-    events_when_completed: rotate_mission_rotator, start_world
+    enable_events: world1_start
+    complete_events: world1_completed
+    events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
   world2:
@@ -264,11 +293,11 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: award_world2
+    events_when_started: world2_started
     reset_events: reset_worlds
-    enable_events: multiball_nightmb_ended
+    enable_events: world2_start
     complete_events: world2_completed
-    events_when_completed: rotate_mission_rotator, start_world
+    events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
   world3:
@@ -278,11 +307,11 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: award_world3
+    events_when_started: world3_started
     reset_events: reset_worlds
-    enable_events: world2_completed
+    enable_events: world3_start
     complete_events: world3_completed
-    events_when_completed: rotate_mission_rotator, start_world
+    events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
   world4:
@@ -292,11 +321,11 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: award_world4
+    events_when_started: world4_started
     reset_events: reset_worlds
-    enable_events: world3_completed
+    enable_events: world4_start
     complete_events: world4_completed
-    events_when_completed: rotate_mission_rotator, start_world
+    events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
   world5:
@@ -306,11 +335,11 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: award_world5
+    events_when_started: world5_started
     reset_events: reset_worlds
-    enable_events: world4_completed
+    enable_events: world5_start
     complete_events: world5_completed
-    events_when_completed: rotate_mission_rotator, start_world
+    events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
   world6:
@@ -320,18 +349,18 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: award_world6
+    events_when_started: world6_started
     reset_events: reset_worlds
-    enable_events: world5_completed
+    enable_events: world6_start
     complete_events: world6_completed
-    events_when_completed: rotate_mission_rotator, start_world
+    events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
 
 achievement_groups:
   worlds:
     achievements: world1, world2, world3, world4, world5, world6
-    start_selected_events: mode_base_started, start_world
+    start_selected_events: world_start, world1_start, world2_start, world3_start, world5_start, world6_start
     events_when_enabled: mission_rotator_ready
     auto_select: true
     enable_while_no_achievement_started: true
