--- a/modes/world2/config/world2.yaml
+++ b/modes/world2/config/world2.yaml
@@ -1,6 +1,6 @@
 #config_version=5
 mode:
-    start_events: award_world2
+    start_events: world2_started
     stop_events: world2_completed
     priority: 500
 
